start time and end time

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -18,10 +18,10 @@ block content
 				input(type='checkbox', name='notifications', checked)
 				br
 				label Sleep Start
-				input(type='text', name='sleeptimestart', checked)
+				input(type='text', name='sleeptimestart')
 				br
 				label Sleep End
-				input(type='text', name='sleeptimeend', checked)
+				input(type='text', name='sleeptimeend')
 				br
 				input(type='submit', value='Sign Up')
 
